# ll-sparql-parser

./: Cargo.toml  README.md  build.rs  gen_kinds.rs  grammar.ebnf  grammar.ungram  grammar_mini.ebnf  grammar_mini.ungram  grammar_small.ebnf  sparql.ungram
generator/: mod.rs  utils.rs
src/: lexer.rs  lib.rs  main.rs  parser.rs  syntax_kind.rs  syntax_node.rs  utils.rs
src/ast/: mod.rs  test.rs
src/ebnf/: mod.rs  parser.rs
src/generator/: utils.rs
src/parser/: build.rs  grammar.rs  mod.rs  parser.rs  tree.rs
src/parser/syntax_tree/: kinds.rs  mod.rs
src/syntax_kind/: generated.rs
