[package]
name = "ll1-parser"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
logos = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"

[build-dependencies]
prettyplease = "0.2.29"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"
ungrammar = "1.16.1"

[dev-dependencies]
indoc = "2.0.5"
